tests/NormalTests/paczka1/small_fuzzy/43477195.err
Error in line 12: NcrPVQHn A543 274,02
Error in line 10: 9fE4i A543 41,6
